# ntsh

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.py
kcpsh/: katcp_lexer.py  main.py
ntsh/: katcp_lexer.py  main.py  protocols.py
ntsh/katcp/: __init__.py  lexer.py
scripts/: kcpsh.py
src/ntsh/: main.py  protocols.py
src/ntsh/katcp/: __init__.py  lexer.py
